WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162637
createError() and JSObject::calculatedClassName() should not throw any exceptions.
https://bugs.webkit.org/show_bug.cgi?id=162637
Summary
createError() and JSObject::calculatedClassName() should not throw any except...
Mark Lam
Reported
2016-09-27 15:13:14 PDT
Patch coming.
Attachments
proposed patch.
(3.61 KB, patch)
2016-09-27 15:18 PDT
,
Mark Lam
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2016-09-27 15:18:10 PDT
Created
attachment 290014
[details]
proposed patch.
Geoffrey Garen
Comment 2
2016-09-27 15:20:46 PDT
Comment on
attachment 290014
[details]
proposed patch. r=me
Mark Lam
Comment 3
2016-09-27 17:29:07 PDT
Thanks for the review. All tests are happy. Landed in
r206476
: <
http://trac.webkit.org/r206476
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug