createError() and JSObject::calculatedClassName() should not throw any exceptions. https://bugs.webkit.org/show_bug.cgi?id=162637

Reviewed by Geoffrey Garen.

* runtime/ExceptionHelpers.cpp:
(JSC::createError):
- assert that errorDescriptionForValue() did not throw an exception.

* runtime/JSObject.cpp:
(JSC::JSObject::calculatedClassName):
- the code already ensures that we always return a non-null String.  Just need to
  make sure that it catches its own exceptions.



Canonical link: https://commits.webkit.org/180587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206476 268f45cc-cd09-0410-ab3c-d52691b4dbfc